syntax = "proto3";

option java_multiple_files = true;
package com.codenotfound.grpc.helloworld;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

message AddRequest{
  int32 one=1;
  int32 two=2;
}

message AddResponse{
  int32 count=1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
  rpc add(AddRequest) returns(AddResponse);
}
